// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTable /> composes the className correctly 1`] = `
<div
  className="xui-editabletable test-classname xui-editabletable-responsive"
>
  <table
    className="xui-editabletable--table"
  >
    <ContextProvider
      value={
        Object {
          "rowOptions": Object {},
        }
      }
    />
  </table>
</div>
`;

exports[`<XUIEditableTable /> render with the caption 1`] = `
<div
  className="xui-editabletable xui-editabletable-responsive"
>
  <table
    className="xui-editabletable--table"
  >
    <caption
      className="xui-editabletable--caption"
    >
      An editable table
    </caption>
    <ContextProvider
      value={
        Object {
          "rowOptions": Object {},
        }
      }
    />
  </table>
</div>
`;

exports[`<XUIEditableTable /> renders correctly 1`] = `
<div
  className="xui-editabletable xui-editabletable-responsive"
>
  <table
    className="xui-editabletable--table"
  >
    <ContextProvider
      value={
        Object {
          "rowOptions": Object {},
        }
      }
    >
      <div>
        XUIEditableTable
      </div>
    </ContextProvider>
  </table>
</div>
`;
